Fix background color to white on mobile view

--- a/static/css/hp-style.css
+++ b/static/css/hp-style.css
@@ -5,7 +5,7 @@ body {
     height: 100%;
     width: 100%;
     letter-spacing: 0.5px;
-    background-color: #FFFFFF;
+    background: #FFFFFF;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -22,6 +22,7 @@ body {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
+    background: #FFFFFF;
 }
 
 
